--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
     <script src="scrypt/input.js"></script>
     <script src="scrypt/process.js"></script>
     <script src="scrypt/grouping.js"></script>
+    <script src="scrypt/sum.js"></script>
+    <script src="scrypt/max.js"></script>
+    <script src="scrypt/min.js"></script>
+    <script src="scrypt/concat.js"></script>
   </footer>
 </html>
